--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "description": "This is a simple package that emulates coin flips in several different ways.",
   "main": "flip.js",
+  "type": "module",
   "scripts": {
+    "flip": "node flip.js",
+	  "flips": "node flips.js",
+	  "guess-flip": "node guess-flip.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
